test(maven-plugin): assert mainClass and sourceClasses are supported